<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_account">
		<EditTextPreference android:key="username"
						android:title="@string/pref_username" 
						android:summary="@string/pref_username_summary"
						android:dialogTitle="@string/pref_username" />
		<EditTextPreference android:key="password"
						android:title="@string/pref_password" 
						android:summary="@string/pref_password_summary"
						android:dialogTitle="@string/pref_password"
						android:inputType="textPassword" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_other">
		<CheckBoxPreference  android:key="wifi"
						android:title="@string/pref_wifi" 
						android:summary="@string/pref_wifi_summary" />
	</PreferenceCategory>
</PreferenceScreen>